@startuml DM-US1005

title DOMAIN MODEL - US1005

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}

' Application Aggregate
package "<<aggregate>> Application" {
    entity Application <<entity>> <<root>> {}
    entity Result <<entity>> {}

    class ApplicationDate <<valueObject>> <<(V, #FF8B40)>> {}
    class ApplicationNumber <<valueObject>> <<(V, #FF8B40)>> {}
    class Outcome <<valueObject>> <<(V, #FF8B40)>> {}
    class Justification <<valueObject>> <<(V, #FF8B40)>> {}

    note right of Outcome: Outcome can be Approved or Rejected
    note left of Justification: Rejected outcomes must have a justification
}

' Result relationships
Result "1" --> "1" Outcome : has
Result "1" --> "1" Justification : can have

' Application relationships
Application "1" --> "1" ApplicationDate : has
Application "1" --> "1" ApplicationNumber : has
Application "1" --> "0..1" Result : has

@enduml